--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,7 +1,10 @@
 ---
 title: "My First Post"
-date: "2021-07-23"
+date: "2023-10-01"
 slug: "my-first-post"
+heroimage: "../my-first-post/20231001_182114.jpg"
+heroiamge_credit_text: "Jon Simeon"
+heroiamge_credit_link: "https://jonsimeon.com"
 ---
 
 This is my first blog post! Isn't it *great*?
